fix editing of drafts with inline images losing track of part numbers, r=neil, bug 692875